fix video alignments

--- a/docroot/sites/all/themes/theme721/css/eiw.css
+++ b/docroot/sites/all/themes/theme721/css/eiw.css
@@ -88,6 +88,7 @@ color:#fff;
 
 .views-field-field-video-link {
 align: center;
+text-align: center;
 }
 .month_topic_block {
 background: url(../images/bg-theme.png) no-repeat #eee7c8;
